Fix cart's buttons appearance on mobile

--- a/src/styles/partials/cart.styl
+++ b/src/styles/partials/cart.styl
@@ -169,7 +169,11 @@
 }
 
 .cart-table__btn {
+  min-height: 1.5rem;
+  
   margin: .25rem;
+  
+  vertical-align: middle;
     
   line-height: 1;
   
@@ -185,9 +189,5 @@
     color: $clrWhite;
     background-color: $clrViolet;
     border-color: $clrViolet;
-  }
-  
-  @media ({$bpMaxDevW320}) {
-    padding: .25rem;
   }
 }
